--- a/britto.html
+++ b/britto.html
@@ -7,7 +7,7 @@
     <div class="navbar-inner">
       <div class="container">
    
-        <a class="brand" href="/">Britto blog</a>
+        <a class="brand" href="/" >Britto blog</a>
    
         <!-- Everything you want hidden at 940px or less, place within here -->
         <div class="nav-collapse">
@@ -77,7 +77,7 @@
         </div>
         <div class="control-group">
           <label for="post-body" class="control-label">Body</label>
-          <div class="controls"><textarea id="post-body" ></textarea></div>
+          <div class="controls"><textarea id="post-body" style="width:100%; height:300px;"></textarea></div>
         </div>
         <div class="control-group">
           <label for="post-slug" class="control-label">Slug</label>
