Create sample slug automatically

--- a/britto.html
+++ b/britto.html
@@ -131,7 +131,7 @@
     <dl>
       <dt>Posted by</dt><dd>{{postUser userId}}</dd>
       <dt>Created</dt><dd>{{date created}}</dd>
-      <dt>Comments</dt><dd>{{commentCount _id}}</dd>
+      <dt>Comments</dt><dd><a href="{{slug}}" class="postView" >{{commentCount _id}}</a></dd>
     </dl>
   </section>
   <br />
