Adding in the ability to delete comments

--- a/britto.html
+++ b/britto.html
@@ -142,6 +142,7 @@
     <strong>{{ name }}</strong>
     {{#markdown}}{{comment}}{{/markdown}}
     {{date created}}
+    {{#if user}}<button class="btn btn-primary delete-comment" data-id="{{_id}}" >Delete</button>{{/if}}
   </section>
   <br />
 </template>
