Adding in fade out, doesn't work too well yet though

--- a/britto.html
+++ b/britto.html
@@ -26,20 +26,24 @@
   </div>
 
   <div class="container">
-    {{#content}}
-    {{/content}}
+    <div id="mainContent">
+      {{#content}}
+      {{/content}}
+    </div>
     <footer>
       <a href="http://britto.co">Powered by Britto</a>
     </footer>
   </div>
-
 </body>
 
 <template name="listView">
+  <section class="listView">
     {{>posts}}
+  </section>
 </template>
 
 <template name="postView">
+  <section class="postView">
     {{#with post}}
       {{>post}}
     {{/with}}
@@ -63,65 +67,72 @@
         </div>
       </fieldset>
     </form>
+  </section>
 </template>
 
 <template name="userArea">
-  {{#if user }}
-    <p>Hello {{#with user}}{{ name }}{{/with}}</p>
-    <form id="post-form" class="form-horizontal" action="#">
-      <fieldset>
-        <legend>Make a post</legend>
-        <div class="control-group">
-          <label for="post-title" class="control-label">Title</label>
-          <div class="controls"><input type="text" id="post-title" /></div>
-        </div>
-        <div class="control-group">
-          <label for="post-body" class="control-label">Body</label>
-          <div class="controls"><textarea id="post-body" style="width:100%; height:300px;"></textarea></div>
-        </div>
-        <div class="control-group">
-          <label for="post-slug" class="control-label">Slug</label>
-          <div class="controls"><input type="text" id="post-slug" /></div>
-        </div>
-        <div class="form-actions">
-          <button class="btn btn-primary" id="post-button" >Post</button>
-        </div>
-      </fieldset>
-    </form>
-  {{else}}
-    <form id="login-form" class="form-horizontal" action="#" >
-      <fieldset>
-        <legend>Login</legend>
-        <div class="control-group">
-          <label for="login-username" class="control-label">Username</label>
-          <div class="controls"><input type="text" id="login-username" /></div>
-        </div>
-        <div class="control-group">
-          <label for="login-password" class="control-label">Password</label>
-          <div class="controls"><input type="password" id="login-password" /></div>
-        </div>
-        <div class="form-actions">
-          <button class="btn btn-primary" id="login-button" >Login</button>
-        </div>
-      </fieldset>
-    </form>
-  {{/if}}
+  <section class="userArea">
+    {{#if user }}
+      <p>Hello {{#with user}}{{ name }}{{/with}}</p>
+      <form id="post-form" class="form-horizontal" action="#">
+        <fieldset>
+          <legend>Make a post</legend>
+          <div class="control-group">
+            <label for="post-title" class="control-label">Title</label>
+            <div class="controls"><input type="text" id="post-title" /></div>
+          </div>
+          <div class="control-group">
+            <label for="post-body" class="control-label">Body</label>
+            <div class="controls"><textarea id="post-body" style="width:100%; height:300px;"></textarea></div>
+          </div>
+          <div class="control-group">
+            <label for="post-slug" class="control-label">Slug</label>
+            <div class="controls"><input type="text" id="post-slug" /></div>
+          </div>
+          <div class="form-actions">
+            <button class="btn btn-primary" id="post-button" >Post</button>
+          </div>
+        </fieldset>
+      </form>
+    {{else}}
+      <form id="login-form" class="form-horizontal" action="#" >
+        <fieldset>
+          <legend>Login</legend>
+          <div class="control-group">
+            <label for="login-username" class="control-label">Username</label>
+            <div class="controls"><input type="text" id="login-username" /></div>
+          </div>
+          <div class="control-group">
+            <label for="login-password" class="control-label">Password</label>
+            <div class="controls"><input type="password" id="login-password" /></div>
+          </div>
+          <div class="form-actions">
+            <button class="btn btn-primary" id="login-button" >Login</button>
+          </div>
+        </fieldset>
+      </form>
+    {{/if}}
+  </section>
 </template>
 
 <template name="posts">
-  {{#each postlist}}
-    {{>postShort}}
-  {{/each}}
+  <section class="posts">
+    {{#each postlist}}
+      {{>postShort}}
+    {{/each}}
+  </section>
 </template>
 
 <template name="comments">
-  {{#if commentslist post}}
-    {{#each commentslist post}}
-      {{>comment}}
-    {{/each}}
-  {{else}}
-    <p>There are no comments on this post yet.</p>
-  {{/if}}
+  <section class="comments">
+    {{#if commentslist post}}
+      {{#each commentslist post}}
+        {{>comment}}
+      {{/each}}
+    {{else}}
+      <p>There are no comments on this post yet.</p>
+    {{/if}}
+  </section>
 </template>
 
 <template name="postShort">
