--- a/britto.html
+++ b/britto.html
@@ -37,6 +37,9 @@
     <li class="">
       <a href="/user_area" rel="internal">User area</a>
     </li>
+    <li class="">
+      <a href="/change_password" rel="internal">Change Password</a>
+    </li>
     <li>
       <a href="/logout" rel="internal">Logout</a>
     </li>  
@@ -79,6 +82,29 @@
       </fieldset>
     </form>
   </section>
+</template>
+
+<template name="change_password">
+  <form id="change-password-form" class="form-horizontal" action="#" >
+    <fieldset>
+      <legend>Change password</legend>
+      <div class="control-group">
+        <label for="change-current-password" class="control-label">Current password</label>
+        <div class="controls"><input type="password" id="change-current-password" /></div>
+      </div>
+      <div class="control-group">
+        <label for="change-new-password" class="control-label">New password</label>
+        <div class="controls"><input type="password" id="change-new-password" /></div>
+      </div>
+      <div class="control-group">
+        <label for="change-repeat-password" class="control-label">New password</label>
+        <div class="controls"><input type="password" id="change-repeat-password" /></div>
+      </div>
+      <div class="form-actions">
+        <button class="btn btn-primary" id="change-password-button" >Submit</button>
+      </div>
+    </fieldset>
+  </form>
 </template>
 
 <template name="user_area">
