--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -113,10 +113,12 @@
   <form id="change-setting-form" class="form-horizontal" action="#" >
     <fieldset>
       <legend>Change settings</legend>
+      {{#each settings}}
       <div class="control-group">
-        <label for="change-setting-site-name" class="control-label">Site name</label>
-        <div class="controls"><input type="text" id="change-setting-site-name" value="{{#setting}}site_name{{/setting}}" /></div>
+        <label for="change-setting-{{key}}" class="control-label">{{#labelify}}{{key}}{{/labelify}}</label>
+        <div class="controls"><input type="text" data-key="{{key}}" id="change-setting-{{key}}" value="{{value}}" /></div>
       </div>
+      {{/each}}
       <div class="form-actions">
         <button class="btn btn-primary" id="change-setting-button" >Submit</button>
       </div>
