--- a/client/templating/main.html
+++ b/client/templating/main.html
@@ -1,7 +1,7 @@
 <template name="container">
     <div id="mainContent">
-      {{#content}}
-      {{/content}}  
+      {{#stellar_page}}
+      {{/stellar_page}}  
     </div>
 </template>
 
@@ -21,17 +21,17 @@
                 <a href="/user_area" rel="internal">User area</a>
               </li>
               <li class="">
-                <a href="/options" rel="internal">Options</a>
+                <a href="/user_area/options" rel="internal">Options</a>
               </li>
               <li>
-                <a href="/settings" rel="internal">Settings</a>
+                <a href="/user_area/settings" rel="internal">Settings</a>
               </li>
               <li>
-                <a href="/logout" rel="internal">Logout</a>
+                <a href="/home/logout" rel="internal">Logout</a>
               </li>  
             {{else}}
               <li class="">
-                <a href="/login" rel="internal">Login</a>
+                <a href="/home/login" rel="internal">Login</a>
               </li>
             {{/if}}
           </ul>
@@ -41,4 +41,3 @@
     </div>
   </div>
 </template>
-
