Adding in user management

--- a/client/templating/main.html
+++ b/client/templating/main.html
@@ -21,6 +21,9 @@
                 <a href="/user_area">User area</a>
               </li>
               <li class="">
+                <a href="/user_area/users">Users</a>
+              </li>
+              <li class="">
                 <a href="/user_area/options">Options</a>
               </li>
               <li>
