--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -9,7 +9,15 @@
 <body>
   {{>nav}}
   <div class="container">
-    {{>container}}
+    <div class="row-fluid">
+      <div class="span8">
+        {{>container}}
+      </div>
+      <div class="span2">
+        {{>sidelinks}}
+      </div>
+    </div>
+
     <footer>
       <a href="http://britto.co">Powered by Britto</a>
     </footer>
