--- a/client/templating/user_area/settings.html
+++ b/client/templating/user_area/settings.html
@@ -14,5 +14,29 @@
         <button class="btn btn-primary" id="change-setting-button" >Submit</button>
       </div>
     </fieldset>
-  </form>  
+  </form>
+
+  <ul>
+    {{#each blogRoll}}
+      <li>{{link}} - {{name}} <button class="delete-blog-roll btn btn-primary" data-id="{{_id}}" >Delete</button></li>
+    {{/each}}
+  </ul>
+
+  <form id="blog-roll-form" class="form-horizontal" action="#" >
+    <fieldset>
+      <legend>Blog roll</legend>
+      <div class="control-group">
+        <label for="add-blog-roll-name" class="control-label">Name</label>
+        <div class="controls"><input type="text" id="add-blog-roll-name" value="" /></div>
+      </div>
+      <div class="control-group">
+        <label for="add-blog-roll-link" class="control-label">Link</label>
+        <div class="controls"><input type="text" id="add-blog-roll-link" value="" /></div>
+      </div>
+      <div class="form-actions">
+        <button class="btn btn-primary" id="add-blog-roll-button" >Submit</button>
+      </div>
+    </fieldset>
+  </form>
+
 </template>
