--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -9,9 +9,15 @@
 <body>
   {{>nav}}
   <div class="container">
-    <div id="slides">
+    <div class="row-fluid">
+      <div class="span8">
+        {{>container}}
+      </div>
+      <div class="span2">
+        {{>sidelinks}}
+      </div>
     </div>
-    {{>container}}
+
     <footer>
       <a href="http://britto.co">Powered by Britto</a>
     </footer>
