--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -4,7 +4,7 @@
 
 <body>
   {{>nav}}
-  <div class="container">
+  <div class="container" id="mainContainer">
     <div class="row-fluid">
       <div class="span8">
         {{>container}}
