--- a/client/templating/user_area/user_area.html
+++ b/client/templating/user_area/user_area.html
@@ -4,22 +4,24 @@
     <h2>Hi {{#with user}}{{ name }}{{/with}}!</h2>
     <form id="post-form" class="form-horizontal" action="#">
       <fieldset>
+        {{#with post}}
         <legend>Make a post</legend>
         <div class="control-group">
           <label for="post-title" class="control-label">Title</label>
-          <div class="controls"><input type="text" id="post-title" value="{{#with post}}{{title}}{{/with}}" /></div>
+          <div class="controls"><input type="text" id="post-title" value="{{title}}" /></div>
         </div>
         <div class="control-group">
           <label for="post-body" class="control-label">Body</label>
-          <div class="controls"><textarea id="post-body" style="width:100%; height:300px;">{{#with post}}{{body}}{{/with}}</textarea></div>
+          <div class="controls"><textarea id="post-body" style="width:100%; height:300px;">{{body}}</textarea></div>
         </div>
         <div class="control-group">
           <label for="post-slug" class="control-label">Slug</label>
-          <div class="controls"><input type="text" id="post-slug" value="{{#with post}}{{slug}}{{/with}}" /></div>
+          <div class="controls"><input type="text" id="post-slug" value="{{slug}}" /></div>
         </div>
         <div class="form-actions">
           <button class="btn btn-primary" id="post-button" >Post</button>
         </div>
+        {{/with}}
       </fieldset>
     </form>
   </section>
