Adding in new graffiti background

--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -15,7 +15,7 @@
     </div>
 
     <footer>
-      <a href="http://britto.co">Powered by Britto</a>
+      <a href="http://britto.co" style="float:left;" >Powered by Britto</a> <a style="float:right;" href="http://www.flickr.com/photos/wwarby/3892661451/">Background by William Warby</a>
     </footer>
   </div>
 </body>
