Make path relative to home for shortcut icon

--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -1,8 +1,8 @@
 <head>
   <title>Britto - Blogging made better</title>
 
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
