Adding in search thanks spammie :)

--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -12,7 +12,8 @@
       <div class="span8">
         {{>container}}
       </div>
-      <div class="span2">
+      <div class="span3">
+        {{>search}}
         {{>sidelinks}}
       </div>
     </div>
