--- a/client/templating/main.html
+++ b/client/templating/main.html
@@ -5,6 +5,13 @@
     </div>
 </template>
 
+<template name="search">
+  <form class="search-form form-horizontal" action="#" >
+    <input type="text" id="search-input" />
+    <input type="submit" id="search-button" value="Search" class="btn btn-primary" />
+  </form>
+</template>
+
 <template name="nav">
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
