Fix broken events - add user seems broken still :/

--- a/client/templating/user_area/user_area.html
+++ b/client/templating/user_area/user_area.html
@@ -19,6 +19,7 @@
           <div class="controls"><input type="text" id="post-slug" value="{{slug}}" /></div>
         </div>
         <div class="form-actions">
+          <input type="hidden" id="post-id" value="{{_id}}" />
           <button class="btn btn-primary" id="post-button" >Post</button>
         </div>
         {{/with}}
