Fixing user event

--- a/client/templating/user_area/users.html
+++ b/client/templating/user_area/users.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="form-actions">
-          <button class="btn btn-primary" id="add-user-button" >Add</button>
+          <button class="btn btn-primary" id="new-user-button" >Add</button>
         </div>
       </fieldset>
     </form>
