user_area.post_list add i am not sure if this is completely bugfree, it seems to work for now, gotta switch computer so this is kind of a "i have to" upload
changes:
post_list added, edit, publish, unpublish, delete posts from the list
blog page only shows posts that should be shown
username in posts is fetched using the userid now (blush)

thats all for now, more maybe later :)

--- a/client/templating/user_area/user_area.html
+++ b/client/templating/user_area/user_area.html
@@ -16,7 +16,7 @@
           <div class="controls">
             <select id="post-author">
               {{#each userlist}}
-              <option value="{{name}}">{{name}}</option>
+              <option value="{{_id}}">{{name}}</option>
               {{/each}}
             </select>
           </div>
