removed sort options from post_list [not working yet] added first part of Tags support split the admin and the normal nav menus

--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -7,15 +7,16 @@
 
 <body>
   {{>nav}}
+  {{>user_area_nav}}
   <div class="container" id="mainContainer">
     <div class="row-fluid">
       <div class="span8">
         {{>container}}
       </div>
-      <div class="span2">
+      <aside class="span2">
         {{>search}}
         {{>sidelinks}}
-      </div>
+      </aside>
     </div>
 
     <footer>
