--- a/client/templating/main.html
+++ b/client/templating/main.html
@@ -13,22 +13,43 @@
 </template>
 
 <template name="nav">
-  <div class="navbar navbar-fixed-top">
+  <header class="navbar position-fixed">
     <div class="navbar-inner">
       <div class="container">
+        
         <a class="brand" href="/" >{{#setting}}site_name{{/setting}}</a>
 
-        <div class="nav-collapse">
+        <nav class="nav-collapse">
           <ul class="nav">
             {{#each links}}
               {{#nav_link url}}{{text}}{{/nav_link}}
+                {{#if sub_links }}
+                  <ul class="submenu">
+                  {{#each sub_links}}
+                    {{#nav_link url}}{{text}}{{/nav_link}}
+                  {{/each}}
+                  </ul>
+                {{/if}}
             {{/each}}
           </ul>
-        </div>
+        </nav>
    
       </div>
     </div>
-  </div>
+  </header>
+</template>
+
+<template name="user_area_nav">
+  {{#if user_is_logged_in }}
+  <nav class="user-area-nav">
+    <header>Admin menu:</header>
+    <ul class="nav user-area-nav-ul">
+      {{#each user_area_links}}
+        {{#nav_link url}}{{text}}{{/nav_link}}
+      {{/each}}
+    </ul>
+  </nav>
+  {{/if}}
 </template>
 
 <template name="sidelinks">
