post tags are mustbe complete now.
see:

http://britto-manarius.meteor.com/
to check the changes at work :)

--- a/client/templating/user_area/post_tags.html
+++ b/client/templating/user_area/post_tags.html
@@ -6,7 +6,7 @@
       <ul class="tags-list">
         {{#each tags}}
           <li>
-            <a href="/tags?tag={{slug}}">{{name}}</a>
+            <a href="/blog/tag?show={{slug}}">{{name}}</a>
             <form action="#" method="post">
               <input class="tag-delete-button" data-id="{{_id}}" type="submit" value="x" title="delete tag" />
             </form>
