see britto-manarius.meteor.com for changes
widgets moved to widgets.html
added widget settings to the settings page and Settings collection

startup.js extended to add new features

various bugfixes for the new features
standardHandler seems to be broken

--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -14,8 +14,7 @@
         {{>container}}
       </div>
       <aside class="span2">
-        {{>search}}
-        {{>sidelinks}}
+        {{>widgets}}
       </aside>
     </div>
 
