--- a/client/templating/widgets.html
+++ b/client/templating/widgets.html
@@ -1,3 +1,15 @@
+<template name="widgets">
+  {{#if showSearch}}
+    {{>search}}
+  {{/if}}
+  {{#if showBlogRoll}}
+    {{>sidelinks}}
+  {{/if}}
+  {{#if showTagCloud }}
+    {{>tagcloud}}
+  {{/if}}
+</template>
+
 <template name="search">
   <form class="search-form form-horizontal" action="#" >
     <input type="text" id="search-input" />
@@ -7,10 +19,23 @@
 
 <template name="tagcloud">
   <div class="widget">
+    
+    <h2>Tags</h2>
     <ul class="tag-cloud">
       {{#each alltags}}
-      <li></li>
+      <li><a href="/blog/tag?show={{slug}}" style="font-size:{{fontsize}}em;">{{name}}</a></li>
       {{/each}}
     </ul>
   </div>
+</template>
+
+<template name="sidelinks">
+  {{#if blogRoll}}
+  <h2>Blog roll</h2>
+  <ul>
+    {{#each blogRoll}}
+      <li><a href="{{link}}">{{name}}</a></li>
+    {{/each}}
+  </ul>
+  {{/if}}
 </template>
