--- a/client/templating/user_area/settings.html
+++ b/client/templating/user_area/settings.html
@@ -5,7 +5,12 @@
       {{#each settings}}
       <div class="control-group">
         <label for="change-setting-{{key}}" class="control-label">{{#labelify}}{{key}}{{/labelify}}</label>
-        <div class="controls"><input type="text" data-key="{{key}}" id="change-setting-{{key}}" value="{{value}}" />
+        <div class="controls">
+          {{#if settingIsBool value}}
+            <input type="checkbox" data-key="{{key}}" id="change-setting-{{key}}"{{#if value}} checked="checked"{{/if}} />
+          {{else}}
+            <input type="text" data-key="{{key}}" id="change-setting-{{key}}" value="{{value}}" />
+          {{/if}}
           <span class="help-inline">{{description}}</span>
         </div>
       </div>
