--- a/client/templating/user_area/post_tags.html
+++ b/client/templating/user_area/post_tags.html
@@ -33,7 +33,7 @@
             <div class="controls"><textarea  id="tag-description" type="text" name="description"></textarea></div>
           </div>
           <div class="form-actions">
-            <button id="add-tag-submit">Add tag</button>
+            <button id="add-tag-submit" class="btn btn-primary">Add tag</button>
           </div>
         </fieldset>
       </form>
